# mipmap

./: .gitignore  CMakeLists.txt  README.md  impl.cpp  main.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: deploy-and-test.yml  linux.yml  macos.yml  run.yml  windows.yml
extlibs/: ImageData.hpp  image_data.cppm  missing_std.cppm  ranges.cppm  ranges.hpp
pipelines/: MipmapComputer.hpp  SubgroupMipmapComputer.hpp
shaders/: mipmap.comp  subgroup_mipmap.comp  subgroup_mipmap_128.comp  subgroup_mipmap_16.comp  subgroup_mipmap_32.comp  subgroup_mipmap_64.comp  subgroup_mipmap_8.comp
vku/: CMakeLists.txt  allocator.cppm  buffer.cppm  command.cppm  config.cppm  descriptor.cppm  frame.cppm  image.cppm  imgui.cppm  mod.cppm  pipeline.cppm  rendering.cppm  swapchain.cppm  utils.cppm  window.cppm
vku/cmake/: CompileVulkanShaders.cmake
vku/details/: concepts.cppm  missing_std.cppm  mod.cppm  ranges.cppm  reflect.cppm
